k3s/deployment.yaml
# kubectl apply -k .
#
# See also https://github.com/bibinwilson/kubernetes-prometheus
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      component: prometheus
  # Dont let two Pods fiddle with the DB at the same time:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.14.0
        imagePullPolicy: IfNotPresent
        #
        # Vanilla  Prometheus  runs   as  /bin/prometheus  inside  the
        # container with the following argumens:
        #
        # args:
        #   - "--config.file=/etc/prometheus/prometheus.yml"
        #   - "--storage.tsdb.path=/prometheus"
        #   - "--web.console.libraries=/usr/share/prometheus/console_libraries"
        #   - "--web.console.templates=/usr/share/prometheus/consoles"
        ports:
        - containerPort: 9090
        # This appears to be a CWD of the process, cf. /proc/1/cwd
        # symlink:
        volumeMounts:
        - mountPath: "/prometheus/"
          name: "prometheus"
        # FIXME: there are two symlinks in /etc/prometheus pointing to
        # the     console_libraries    &     consoles    dirs     from
        # /usr/share/prometheus.   They  will   be  eclipsed  by  this
        # mount. But it still appears to work.
        - mountPath: "/etc/prometheus/"
          name: "config"

      volumes:
      - name: "prometheus"
        persistentVolumeClaim:
          claimName: "prometheus"
      - name: "config"
        configMap:
          defaultMode: 420      # Hm?
          name: "config"
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  selector:
    component: prometheus
  ports:
  - port: 9090
    targetPort: 9090
---
#
# We assume here that *.localhost resolves to the local machine.  Following
# URLs should be directed to Prometheus.
#
#     http://prometheus.localhost
#     https://prometheus.localhost
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: prometheus.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
